[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/background.png" type="Texture" id=1]
[ext_resource path="res://clock.tres" type="DynamicFont" id=2]
[ext_resource path="res://setCountdown_processing.gd" type="Script" id=3]
[ext_resource path="res://images/Buttons/button_increase.png" type="Texture" id=4]
[ext_resource path="res://images/Buttons/button_decrease.png" type="Texture" id=5]
[ext_resource path="res://images/Buttons/menu_pressed.png" type="Texture" id=6]
[ext_resource path="res://images/button_menu.png" type="Texture" id=7]
[ext_resource path="res://setCountdown.gd" type="Script" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -59.0
margin_right = 210.5
margin_bottom = 59.0
alignment = 1
script = ExtResource( 3 )

[node name="Hours" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 120.0
margin_bottom = 118.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]0 "
text = "0 "
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 124.0
margin_top = 9.0
margin_right = 129.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = ":"

[node name="Minutes" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 133.0
margin_right = 233.0
margin_bottom = 118.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]00"
text = "00"
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 237.0
margin_top = 9.0
margin_right = 242.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = ":"

[node name="Seconds" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 246.0
margin_right = 346.0
margin_bottom = 118.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]00"
text = "00"
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 350.0
margin_right = 400.0
margin_bottom = 118.0

[node name="IncreaseButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )

[node name="DecreaseButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.858
anchor_top = 0.866
anchor_right = 0.972
anchor_bottom = 0.966
margin_left = -7.84
margin_top = -9.12003
margin_right = 283.44
margin_bottom = 198.88
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[connection signal="menuClosed" from="HBoxContainer" to="." method="_on_HBoxContainer_menuClosed"]
[connection signal="gui_input" from="HBoxContainer/Hours" to="HBoxContainer" method="_on_Hours_gui_input"]
[connection signal="gui_input" from="HBoxContainer/Minutes" to="HBoxContainer" method="_on_Minutes_gui_input"]
[connection signal="gui_input" from="HBoxContainer/Seconds" to="HBoxContainer" method="_on_Seconds_gui_input"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/IncreaseButton" to="HBoxContainer" method="_on_IncreaseButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/DecreaseButton" to="HBoxContainer" method="_on_DecreaseButton_pressed"]
[connection signal="pressed" from="TextureButton" to="HBoxContainer" method="_on_TextureButton_pressed"]
